winPopUp & Play Again btn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
     
+    <div class="winPopUp hidden">
+        <h1><span class="winner">hi</span> wins!</h1>
+        <button class="playAgain">
+            <span class="btn-text">Play Again</span>
+        </button>
+    </div>
+    <div class="overlay hidden"></div>
 
     <h1 id="heading">Tic-Tac-Toe</h1>
     <div id="gameBoard">
