--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <div class="winPopUp hidden">
-        <h1><span class="winner">hi</span> wins!</h1>
+        <h1 class="winner">hi wins!</h1>
         <button class="playAgain">
             <span class="btn-text">Play Again</span>
         </button>
